--- a/index.html
+++ b/index.html
@@ -11,9 +11,26 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <link rel="stylesheet" href="./style.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
 </head>
 <body>
-
+  <header id="header">
+    <div class="logo">
+    <a href="#" class="logo"></a>
+    </div>
+      <nav class="main-menu">
+        <ul class="menu-navigate">
+          <li class="menu-item"><a href="#" class="menu-link is-active">Apple</a></li>
+          <li class="menu-item"><a href="#" class="menu-link">Samsung</a></li>
+          <li class="menu-item"><a href="#" class="menu-link">Смартфоны и телефоны</a></li>
+          <li class="menu-item"><a href="#" class="menu-link" data-qa="hover">Ноутбуки и компьютеры</a></li>
+          <li class="menu-item"><a href="#" class="menu-link">Гаджеты</a></li>
+          <li class="menu-item"><a href="#" class="menu-link">Планшеты</a></li>
+          <li class="menu-item"><a href="#" class="menu-link">Фото</a></li>
+          <li class="menu-item"><a href="#" class="menu-link">Видео</a></li>
+        </ul>
+      </nav>
+  </header>
 <script type="text/javascript" src="./main.js"></script>
 </body>
 </html>
