--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 <body>
   <header id="header">
     <div class="logo">
-    <a href="#" class="logo"></a>
+    <a href="#" class="logo">
+      <img src="./images/logo.png" alt="logotype">
+      </a>
     </div>
       <nav class="main-menu">
         <ul class="menu-navigate">
